--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Click to Start
   </div>
   <div id="game-over-text" class="overlay-text">
-    GAME OVER(but dont worry we are still friends)
+    GAME OVER
     <span class="overlay-text-small">Click to Restart</span>
   </div>
   <div id="victory-text" class="overlay-text">
